Fix unselectable path jump.

--- a/app/renderer/main.css
+++ b/app/renderer/main.css
@@ -98,6 +98,7 @@ h1.title {
   height: 22px;
   text-align: center;
   margin: 0;
+  z-index: 0;
 }
 
 #toolbar div.issuesSummary {
@@ -113,7 +114,7 @@ h1.title {
   text-align: center;
   margin: 0;
   max-width: 200px;
-  z-index: 1; /* On top of left/right buttons */
+  z-index: 2;
   -webkit-app-region: no-drag;
 }
 
@@ -157,6 +158,8 @@ img.issue-icon.warning {
   align-items: center;
   flex: 1;
   height: 100%;
+  position: relative;
+  z-index: 1;
 }
 #toolbar .buttons.left {
   justify-content: flex-start;
@@ -167,7 +170,9 @@ img.issue-icon.warning {
 
 #toolbar .button {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   border: 0;
   width: 30px;
   height: 30px;
